2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        
2011-01-29  Brian Mattern

        Fix bug when you have an empty <Name></Name> in a menu

2011-01-30  Carsten Haitzler (The Rasterman)

        Fix tests to not build clearenv related code if not available

2011-01-31  Sebastian Dransfeld

	* Fix memleak, free cache icons after retrival
	* Add temporary memory cache of eet file data
	* Always use icon cache, remove old code
	* Make check for stat return more explicit
	* Check whether dirs is NULL
	* Create internal struct for theme cache
	* Check if theme has changed when building cache
	* Prefix internal efreet cache keys with __
	* Create one cache file for each theme
	* Before doing strcmp, check if pointers are equal. They might be
	  because of mmap and stringshare.
	* Add local icon cache, so we wont hit the cache file for each icon
	  to be retrieved

2011-02-03  Sebastian Dransfeld

        * Fix leak in efreet_mime_type_icon_get()

2011-02-05  Sebastian Dransfeld

        * Remove global log domain and make all files define log domain
          before including efreet_private.h
        * Remove efreet_xml_{init,shutdown}() from efreet_menu.c, it is done
          in efreet_init()
        * Set EFREET_MODULE_LOG_DOM variable to -1 after unregister
        * Remove duplicate logging macros

2011-02-05  Hannes Janetzek

        * Clear mem cache when closing eet file

2011-02-06  Sebastian Dransfeld

        * Fix doc for efreet_utils.{h,c},efreet_mime.c
        * Add comment for all internal EAPI functions
        * Remove doc for removed _efreet_log_domain_global

2011-02-07  Sebastian Dransfeld

	* Don't create cache dir several times
	* Do efreet_init before using efreet_*() functions